<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <EditText
            android:id="@+id/edtxtNombreR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/edtxtEmailR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/edtxtPasswordR"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/edtxtPasswordr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/repetir_contrasena"
            android:inputType="textPassword" />

        <Space
            android:layout_width="205dp"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/edtxtTelefonoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:autofillHints="" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="1507dp"
        android:layout_height="716dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="284dp" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnRegistroR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginTop="-25dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@+id/userImage"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>