<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/apellido"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFirstName"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserId"
        app:layout_constraintStart_toEndOf="@+id/textViewUserId"
        app:layout_constraintTop_toTopOf="@+id/textViewUserId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/numero"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/email"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</androidx.constraintlayout.widget.ConstraintLayout>